<resources>
    <string name="app_name">에코 드라이빙 코치</string>
    
    <!-- 일반 -->    
    <string name="back">뒤로</string>

    <!-- 홈 화면 -->    
    <string name="welcome_title">에코 드라이빙 코치에 오신 것을 환영합니다</string>
    <string name="welcome_message">환영합니다! 안전하고 친환경적인 운전을 시작하세요.</string>
    <string name="welcome_name">안녕하세요, %1$s님! 안전하고 친환경적인 운전을 시작하세요.</string>
    <string name="eco_score">에코 점수</string>
    <string name="co2_saved">CO₂ 절감량</string>
    <string name="start_drive">운전 시작하기</string>
    <string name="recent_tips">에코 드라이빙 팁</string>
    
    <!-- 드라이브 화면 -->    
    <string name="driving_mode">드라이빙 모드</string>
    <string name="current_speed">현재 속도</string>
    <string name="km_per_hour">km/h</string>
    <string name="km_h">km/h</string>
    <string name="eco_info">친환경 정보</string>
    <string name="realtime_metrics">실시간 지표</string>
    <string name="fuel_efficiency">연비</string>
    <string name="l_per_100km">L/100km</string>
    <string name="km_l">km/L</string>
    <string name="co2_emission">CO₂ 배출량</string>
    <string name="kg_per_km">kg/km</string>
    <string name="kg_km">kg/km</string>
    <string name="points">점</string>
    <string name="start_tracking">주행 시작</string>
    <string name="stop_tracking">주행 종료</string>
    <string name="search_destination">목적지 검색</string>
    <string name="map_image">지도 이미지</string>
    <string name="zero_speed_value">0</string>
    <string name="no_value">-</string>

    <!-- 내비게이션 화면 -->
    <string name="start_navigation">경로 안내 시작</string>
    
    <!-- 히스토리 화면 -->    
    <string name="driving_history">주행 기록</string>
    <string name="daily">일간</string>
    <string name="weekly">주간</string>
    <string name="monthly">월간</string>
    <string name="no_history">아직 주행 기록이 없습니다</string>
    <string name="no_driving_history">운전 기록이 없습니다</string>
    <string name="history_empty_message">아직 기록된 주행이 없습니다. 첫 주행을 시작해보세요.</string>
    <string name="driving_distance">주행 거리</string>
    <string name="driving_duration">소요 시간</string>
    <string name="eco_score_item">에코 점수</string>
    <string name="start_your_first_drive">첫 주행을 시작해보세요</string>
    <string name="start_driving">운전 시작</string>
    
    <!-- 리포트 화면 -->    
    <string name="driving_report">주행 리포트</string>
    <string name="statistics">통계</string>
    <string name="overall_eco_score">종합 에코 점수</string>
    <string name="default_eco_score">85</string>
    <string name="good_driving_message">좋습니다! 효율적으로 운전하고 계십니다.</string>
    <string name="driving_feedback_good">좋은 운전습관을 유지하고 계십니다</string>
    <string name="carbon_emissions">탄소 배출량</string>
    <string name="default_carbon_week">1.2</string>
    <string name="default_carbon_month">5.3</string>
    <string name="this_week">이번 주</string>
    <string name="monthly_avg">월 평균</string>
    <string name="co2_saved_report">CO₂ 절감량</string>
    <string name="default_carbon_saved">2.5</string>
    <string name="weekly_carbon_trend">주간 탄소 배출 추이</string>
    <string name="driving_habits_analysis">운전 습관 분석</string>
    <string name="rapid_acceleration">급가속</string>
    <string name="default_rapid_acceleration">2</string>
    <string name="hard_braking">급정거</string>
    <string name="default_hard_braking">1</string>
    <string name="sharp_turns">급회전</string>
    <string name="default_sharp_turns">3</string>
    <string name="idling_time">공회전 시간</string>
    <string name="default_idling_time">5</string>
    <string name="times_count">회</string>
    <string name="minutes">분</string>
    
    <!-- 로그인 화면 -->
    <string name="login_title">계정 로그인</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="login">로그인</string>
    <string name="logging_in">로그인 중...</string>
    <string name="no_account">계정이 없으신가요?</string>
    <string name="register">회원가입</string>
    
    <!-- 회원가입 화면 -->
    <string name="create_account">계정 만들기</string>
    <string name="register_subtitle">에코 드라이빙 커뮤니티에 가입하세요</string>
    <string name="full_name">이름</string>
    <string name="phone">전화번호</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="registering">가입 중...</string>
    <string name="have_account">이미 계정이 있으신가요?</string>
    
    <!-- 에러 메시지 -->
    <string name="error_name_required">이름을 입력해주세요</string>
    <string name="error_email_required">이메일을 입력해주세요</string>
    <string name="error_invalid_email">유효하지 않은 이메일 형식입니다</string>
    <string name="error_phone_required">전화번호를 입력해주세요</string>
    <string name="error_invalid_phone">유효하지 않은 전화번호입니다</string>
    <string name="error_password_required">비밀번호를 입력해주세요</string>
    <string name="error_password_too_short">비밀번호는 최소 6자 이상이어야 합니다</string>
    
    <!-- 네비게이션 화면 -->
    <string name="navigation_title">카카오 네비게이션</string>
    <string name="navigation_description">카카오 네비게이션을 통해 안전하고 효율적인 최적의 경로로 안내해 드립니다.</string>
    <string name="title_notifications">Notifications</string>
    <string name="start_driving_prompt">Ready to start your eco-drive?</string>
    <string name="stop_driving">Stop Driving</string>
    <string name="navigation_image">네비게이션 이미지</string>
    <string name="navigation_permission_required">네비게이션 기능을 사용하려면 위치 권한이 필요합니다</string>
    <string name="error_passwords_not_match">비밀번호가 일치하지 않습니다</string>
    <string name="name_required">이름을 입력해주세요</string>
    <string name="email_required">이메일을 입력해주세요</string>
    <string name="invalid_email">유효하지 않은 이메일 형식입니다</string>
    <string name="phone_required">전화번호를 입력해주세요</string>
    <string name="invalid_phone">유효하지 않은 전화번호입니다</string>
    <string name="password_too_short">비밀번호는 최소 6자 이상이어야 합니다</string>
    <string name="passwords_not_match">비밀번호가 일치하지 않습니다</string>
    <string name="login_failed">로그인에 실패했습니다. 다시 시도해주세요.</string>
    <string name="network_error">네트워크 오류: %1$s</string>
    <string name="registration_success">회원가입 성공! 로그인해주세요.</string>
    <string name="registration_failed">회원가입에 실패했습니다. 다시 시도해주세요.</string>
    <string name="recovery_not_implemented">비밀번호 복구 기능은 아직 구현되지 않았습니다</string>
    <string name="password_recovery_not_implemented">비밀번호 복구 기능은 아직 구현되지 않았습니다</string>
    <string name="error_user_exists">이미 가입된 이메일입니다.</string>
    <string name="error_user_check">사용자 정보 확인 중 오류가 발생했습니다.</string>
    
    <!-- 추가 문자열 리소스 -->
    <string name="default_eco_score_value">80</string>
    <string name="default_co2_saved_value">0.0 kg</string>
    <string name="default_speed_value">0</string>
    <string name="default_fuel_efficiency_value">0.0</string>
    <string name="default_co2_emission_value">0.0</string>
    <string name="default_driving_eco_score">0</string>
    <string name="registration_successful">회원가입이 완료되었습니다!</string>
    <string name="error_network_connection">네트워크 연결을 확인해주세요</string>
    <string name="error_server">서버 오류가 발생하였습니다. 잠시 후 다시 시도해주세요</string>
    <string name="loading">로딩 중...</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="delete">삭제</string>
    <string name="edit">편집</string>
</resources>